apps/prometheus/templates/network.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: tls-gateway-prom-k8s
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  gatewayClassName: cilium
  listeners:
  - name: https-prom-k8s
    protocol: HTTPS
    port: 9090
    hostname: "prom-k8s.cikli.com"
    allowedRoutes:
      namespaces:
        from: Same
    tls:
      certificateRefs:
      - kind: Secret
        name: prom-k8s-1-tls
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: cilium-route-prom-k8s
  annotations:
    external-dns.alpha.kubernetes.io/hostname: prom-k8s.cikli.com
spec:
  parentRefs:
  - name: tls-gateway-prom-k8s
  hostnames:
  - "prom-k8s.cikli.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prom-web
      port: 9090
